--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,windows
+
+# Recursos de edición y diseño
+.Recursos*
