Se agrego Index y css

--- a/.gitignore
+++ b/.gitignore
@@ -55,4 +55,4 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,windows
 
 # Recursos de edición y diseño
-.Recursos*
+Recursos*
