--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
         "@picocss/pico": "^1.5.7",
         "bootstrap": "^5.2.3",
         "dat.gui": "^0.7.9",
+        "plotly.js": "^2.26.0",
         "react": "^18.2.0",
         "react-bootstrap": "^2.7.2",
         "react-dom": "^18.2.0",
+        "react-plotly.js": "^2.6.0",
         "react-router-dom": "^6.10.0",
         "react-router-hash-link": "^2.4.3",
         "sass": "^1.60.0"
